--- a/css/start-page.css
+++ b/css/start-page.css
@@ -32,6 +32,7 @@
         font-family: Inter; 
         font-size: 70px;
         font-weight: normal;
+        z-index: 10;
     }
     
     .startBtn:hover {
@@ -45,4 +46,15 @@
         margin: 100px auto;
         width: 800px;
         height: 500px;
+    }
+
+    .distort {
+        animation: distortcoil 1.1s linear;
+        animation-iteration-count: infinite;
+        z-index: -1;
+    }
+    
+    @keyframes distortcoil {
+        0%, 100% {transform: scale(1, 1);}
+        50% {transform: scale(0.95, 1.1);}
     }
