--- a/css/base.css
+++ b/css/base.css
@@ -131,17 +131,18 @@ body{
 .btn-home{
 	height: 50px;
 	width: 50px;
-	background-color: #0077ff;
+	background-color: #00e1ffd8;
 	border-radius: 100px;
-	border:2px #00e1ffd8 solid ;
+	border:2px #0077ff solid ;
 	line-height: 50px;
 	text-align: center;
 	font-size: 25px;
 }
 	
 .btn-home:hover{
-	background-color: #00e1ffd8;
-	border:2px #0077ff solid ;
+	background-color: #0077ff;
+	color: white;
+	border:2px #00e1ffd8 solid ;
 }
 .btn-speak{
 	height: 50px;
