--- a/css/base.css
+++ b/css/base.css
@@ -23,15 +23,16 @@ body{
 	border: 2px #EA6648 solid;
 	border-radius: 30px;
 	text-align: center;
-	line-height: 150px;
 	font-size: 22px;
-
 	font-family: Inter; 
 	font-size: 25px;
 	font-weight: normal;
 	color: #482921;
-
 	margin-bottom: 15rem;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 
@@ -85,7 +86,6 @@ margin-left: 2rem;
 			background-color: #9DE981;
 			border-radius: 100px;
 			border:2px #7EC87C solid ;
-			line-height: 50px;
 			text-align: center;
 
 		}
@@ -102,7 +102,6 @@ margin-left: 2rem;
 			border-radius: 100px;
 			border:2px #C33333 solid ;
 			
-			line-height: 50px;
 			text-align: center;
 
 		}
@@ -117,7 +116,6 @@ margin-left: 2rem;
 			background-color: #E2C1B6;
 			border-radius: 100px;
 			border:2px #D6A89E solid ;
-			line-height: 50px;
 			text-align: center;
 			
 
@@ -141,4 +139,4 @@ margin-left: 2rem;
 			  font-family: "Rubik Mono One", monospace;
   			  font-weight: 400;
   			  font-size: 20px;
-		} */
+		} 
