--- a/css/base.css
+++ b/css/base.css
@@ -88,6 +88,7 @@ body{
 	background-color: #9DE981;
 	border-radius: 100px;
 	border:2px #7EC87C solid ;
+	line-height: 50px;
 	text-align: center;
 	font-size: 25px;
 }
@@ -104,6 +105,7 @@ body{
 	border-radius: 100px;
 	border:2px #C33333 solid ;
 	font-size: 25px;
+	line-height: 50px;
 	text-align: center;
 
 }
@@ -119,6 +121,7 @@ body{
 	background-color: #E2C1B6;
 	border-radius: 100px;
 	border:2px #D6A89E solid ;
+	line-height: 50px;
 	text-align: center;
 	font-size: 25px;
 }
@@ -152,6 +155,7 @@ body{
 	border-radius: 100px;
 	border:2px #727272 solid ;
 	font-size: 25px;
+	line-height: 50px;
 	text-align: center;
     position: absolute;
     right: 25px;
