--- a/css/intro.css
+++ b/css/intro.css
@@ -61,21 +61,22 @@ a{
 .btn-speak{
 	height: 50px;
 	width: 50px;
-	background-color: #b6e1e4;
+	background-color: #E2C1B6;
 	border-radius: 100px;
-	border:2px #727272 solid ;
+	border:2px #D6A89E solid ;
+    color: #482921;
 	font-size: 25px;
 	line-height: 50px;
 	text-align: center;
     position: absolute;
-    right: -15px;
-    top: -15px;
+    right: 245px;
+    top: 80px;
     z-index: 10;
 }
 .btn-speak:hover{
-	background-color: #727272;
+	background-color: #D6A89E;
 	color: white;
-	border:2px solid #b6e1e4 ;
+	border:2px solid #E2C1B6 ;
 }
 
 .distort {
