--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,11 @@ body{
 
 .text-only{
 	position: relative;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .text-boxes {
@@ -187,7 +192,27 @@ body{
 	color: white;
 	border:2px solid #E2C1B6 ;
 }
-	
+
+#restartGameId {
+	text-decoration: none;
+	color: #482921;
+	background-color: #F39878;
+	border: 2px #EA6648 solid;
+	border-radius: 30px;
+	text-align: center;
+	align-content: center;
+	font-family: Inter; 
+	font-size: 25px;
+	padding: 10px;
+}
+
+#restartGameId:hover {
+	background-color: #EA6648;
+	border: #F39878;
+	color: white
+}
+
+
 #next{
 	color: inherit;
 }
